--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "packageManager": "npm@10.2.3",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "packages/shared/*"
   ]
 }
