[Feat]: Add Habits to database

--- a/packages/shared/db/package.json
+++ b/packages/shared/db/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "main": "index.js",
   "exports": {
+    "./habits": {
+      "types": "./dist/habits/index.d.ts",
+      "require": "./dist/habits/index.js"
+    },
     "./users": {
       "types": "./dist/users/index.d.ts",
       "require": "./dist/users/index.js"
