--- a/.github/workflows/main_ember-habits.yml
+++ b/.github/workflows/main_ember-habits.yml
@@ -10,14 +10,14 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: "./apps/functions" # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: "20" # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: "Checkout GitHub Action"
         uses: actions/checkout@v4
 
       - name: Setup Node ${{ env.NODE_VERSION }} Environment
@@ -25,17 +25,20 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: 'Resolve Project Dependencies Using Npm'
+      - name: "Resolve Project Dependencies Using Npm"
         shell: bash
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
+          pushd './packages/shared/db'
+          npm run generate
+          popd
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm run build --if-present
           npm run test --if-present
           popd
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip -r ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -46,8 +49,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    __environment__
-    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -56,14 +57,13 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
-      - name: 'Run Azure Functions Action'
+
+      - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'ember-habits'
-          slot-name: 'Production'
+          app-name: "ember-habits"
+          slot-name: "Production"
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8A686F0508F84484A9C9A4321156A00B }}
-          sku: 'flexconsumption'
-        
+          sku: "flexconsumption"
